0.2.2cvs
========

- Refactored the code to remove m_, and use static_cast<> and friends
- Make messages track source, so the player who initiated kick/mute/deaf of others is known to all.
- Check version on startup
- Show version in mainwidow
- Add log window on the left
- Reduce dependencies in MainWindow.h
- Store list of servers in connect dialog
- Added persistant database
- Added CHANGES file